force-app/main/default/objects/I_RS_Profile_Qualification__c/I_RS_Profile_Qualification__c.object-meta.xml
<CustomObject>
    <description>Pofile qualifications from Symplectic/mypubs
https://eawebdev.atlassian.net/browse/T2-866</description>
    <label>Profile Qualification</label>
    <nameField>
        <displayFormat>PQ-{0000}</displayFormat>
        <label>Profile Qualification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profile Qualifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>