force-app/main/default/objects/I_RS_Profile_Qualification__c/fields/I_RS_Profile__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Profile__c</fullName>
    <description>Lookup to academic profile</description>
    <label>Profile</label>
    <referenceTo>I_RS_Profile__c</referenceTo>
    <relationshipLabel>Profile Qualifications</relationshipLabel>
    <relationshipName>Profile_Qualifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>