force-app/main/default/objects/I_RS_Profile_Qualification__c/fields/I_RS_Qualification__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Qualification__c</fullName>
    <label>Qualification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>