force-app/main/default/objects/I_RS_Profile_Qualification__c/fields/I_RS_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Degree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>